docs: improve functional domain modeling lecture V2 quality
- Add Java 25 `with` syntax Preview notice and alternative code
- Clarify Money.subtract() negative handling with safe methods
- Fix Validation type generic consistency for proper type inference
- Enhance Chapter 4 with Phantom Type pattern and Optional anti-patterns
- Add quizzes Q4.3 and Q4.4 with answers in Appendix D
- Add UnvalidatedOrderLine and ValidatedOrderLine type definitions
- Update Appendix E with Java version requirements
- Fix sample project compilation issues